View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033554 | Open CASCADE | OCCT:Foundation Classes | public | 2023-12-15 00:38 | 2024-07-18 21:26 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | major | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.8.1 | ||||
Summary | 0033554: Foundation Classes - Missed hash specialization for enumerations | ||||
Description | In file included from C:/Users/rodrlyra/projects/dyonicsplanpoc/work/occt-wasm32-occt-pthread-make-test/include/opencascade\NCollection_DefaultHasher.hxx:1: C:/Users/rodrlyra/projects/occt/src/NCollection/NCollection_DefaultHasher.hxx:32:54: error: implicit instantiation of undefined template 'std::hash<Aspect_XAtom>' DEFINE_HASHER(NCollection_DefaultHasher, TheKeyType, std::hash<TheKeyType>, std::equal_to<TheKeyType>) ^ C:/Users/rodrlyra/projects/occt/src/NCollection/NCollection_DataMap.hxx:605:10: note: in instantiation of template class 'NCollection_DefaultHasher<Aspect_XAtom>' requested here Hasher myHasher; ^ C:/Users/rodrlyra/projects/occt/src/Aspect/Aspect_DisplayConnection.hxx:126:47: note: in instantiation of template class 'NCollection_DataMap<Aspect_XAtom, unsigned long long>' requested here NCollection_DataMap<Aspect_XAtom, uint64_t> myAtoms; ^ C:\Users\rodrlyra\projects\dyonicsplanpoc\FAIPlan\wasm_build\emsdk-3.0.1\upstream\emscripten\cache\sysroot/include/c++/v1\typeindex:89:50: note: template is declared here template <class _Tp> struct _LIBCPP_TEMPLATE_VIS hash; ^ 1 error generated. em++: error: 'C:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/emsdk-3.0.1/upstream/bin\clang++.exe -target wasm32-unknown-emscripten -DEMSCRIPTEN -fvisibility=default -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-cxx-exceptions -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr -D__EMSCRIPTEN_major__=3 -D__EMSCRIPTEN_minor__=0 -D__EMSCRIPTEN_tiny__=1 -D_LIBCPP_ABI_VERSION=2 -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/SDL --sysroot=C:\Users\rodrlyra\projects\dyonicsplanpoc\FAIPlan\wasm_build\emsdk-3.0.1\upstream\emscripten\cache\sysroot -Xclang -iwithsysroot/include\compat -DHAVE_DRACO -DHAVE_FREETYPE -DHAVE_GLES2_EXT -DHAVE_RAPIDJSON -DOCC_CONVERT_SIGNALS -IC:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/freetype-2.10.4-wasm32/include -IC:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/freetype-2.10.4-wasm32/include/freetype -IC:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/emsdk-3.0.1/upstream/emscripten/cache/sysroot/include -IC:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/rapidjson-1.1.0/include -IC:/Users/rodrlyra/projects/dyonicsplanpoc/FAIPlan/wasm_build/draco-1.4.1-wasm32/include -IC:/Users/rodrlyra/projects/dyonicsplanpoc/work/occt-wasm32-occt-pthread-make-test/include/opencascade -pthread -fexceptions -fPIC -Wall -Wextra -Wshorten-64-to-32 -O3 -DNDEBUG -DNo_Exception -DOCCT_NO_PLUGINS -std=gnu++11 -MD -MT src/TKService/CMakeFiles/TKService.dir/__/Aspect/Aspect_DisplayConnection.cxx.o -MF CMakeFiles\TKService.dir\__\Aspect\Aspect_DisplayConnection.cxx.o.d -c C:\Users\rodrlyra\projects\occt\src\Aspect\Aspect_DisplayConnection.cxx -o CMakeFiles\TKService.dir\__\Aspect\Aspect_DisplayConnection.cxx.o' failed (returned 1) mingw32-make[2]: *** [src/TKService/CMakeFiles/TKService.dir/__/Aspect/Aspect_DisplayCo need to fix compilation problem | ||||
Steps To Reproduce | Not possible | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33554 has been created by dpasukhi. SHA-1: aa4fd213f538fad33ea88c7941dc2828b38de48a Detailed log of new commits: Author: dpasukhi Date: Thu Dec 14 21:39:25 2023 +0000 0033554: Foundation Classes - Missed hash specialization for enumerations Fixed problem with missed hash specialization |
|
Dear IKA, please review: OCCT: CR33554_1 PROD: NO The problem exist only for EMSDK (3.0.1, on latest version the specialization for enum was imlemented) Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR0-780-beta-dpasukhi/view/COMPARE/ |
|
Branch CR33554_1 has been created by dpasukhi. SHA-1: 85b414d6c58ea3eaf90dc0fb3b9fe4444d94e8fa Detailed log of new commits: Author: dpasukhi Date: Thu Dec 14 21:39:25 2023 +0000 0033554: Foundation Classes - Missed hash specialization for enumerations Fixed problem with missed hash specialization |
|
No remarks. Dear bugmaster, please integrate OCCT: CR33554_1 PROD: NO |
|
Combination - OCCT branch : IR-2023-12-15 master SHA - 83bb2a329d6bb51a194aa27abb11facde2f6a270 d2ef868da4165400c82322bd7f11b652decce47a Products branch : master SHA - 5dec4946337d2a162f4821cf085bd1e181f46ce8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18269.079999999904 / 19196.92000000018 [-4.83%] Products Total CPU difference: 11554.499999999949 / 12290.319999999989 [-5.99%] Windows-64-VC142: OCCT Total CPU difference: 20132.90625 / 20986.796875 [-4.07%] Products Total CPU difference: 12359.828125 / 14282.375 [-13.46%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33554 has been deleted by dpasukhi. SHA-1: aa4fd213f538fad33ea88c7941dc2828b38de48a |
|
Branch CR33554_1 has been deleted by dpasukhi. SHA-1: 85b414d6c58ea3eaf90dc0fb3b9fe4444d94e8fa |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-15 00:38 | dpasukhi | New Issue | |
2023-12-15 00:38 | dpasukhi | Assigned To | => dpasukhi |
2023-12-15 00:39 | git | Note Added: 0114741 | |
2023-12-15 13:59 | dpasukhi | Assigned To | dpasukhi => ika |
2023-12-15 13:59 | dpasukhi | Status | new => resolved |
2023-12-15 13:59 | dpasukhi | Steps to Reproduce Updated | |
2023-12-15 13:59 | dpasukhi | Note Added: 0114749 | |
2023-12-15 14:01 | git | Note Added: 0114750 | |
2023-12-15 14:02 | dpasukhi | Note Edited: 0114749 | |
2023-12-15 14:04 | dpasukhi | Note Edited: 0114749 | |
2023-12-15 16:27 | ika | Assigned To | ika => bugmaster |
2023-12-15 16:27 | ika | Status | resolved => reviewed |
2023-12-15 16:27 | ika | Note Added: 0114758 | |
2023-12-18 02:11 | vglukhik | Note Added: 0114764 | |
2023-12-18 02:17 | vglukhik | Changeset attached | => occt master 5b0f5b52 |
2023-12-18 02:17 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-18 02:17 | dpasukhi | Status | reviewed => verified |
2023-12-18 02:17 | dpasukhi | Resolution | open => fixed |
2024-07-18 21:25 | git | Note Added: 0116251 | |
2024-07-18 21:26 | git | Note Added: 0116253 |