0033554: Foundation Classes - Missed hash specialization for enumerations

Fixed problem with missed hash specialization